force-app/main/default/objects/Mother__c/Mother__c.object-meta.xml
<CustomObject>
    <label>Mother</label>
    <nameField>
        <label>Mother Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mothers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>