force-app/main/default/objects/Mother__c/fields/Childrens__c.field-meta.xml
<CustomField>
    <fullName>Childrens__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Childrens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>