force-app/main/default/objects/Mother__c/fields/Daughters__c.field-meta.xml
<CustomField>
    <fullName>Daughters__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daughters</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>