force-app/main/default/objects/Mother__c/fields/L3DB_Total_Case__c.field-meta.xml
<CustomField>
    <fullName>L3DB_Total_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L3DB_Total_Case</label>
    <referenceTo>L3DB_Total_Case__c</referenceTo>
    <relationshipLabel>Mothers</relationshipLabel>
    <relationshipName>Mothers</relationshipName>
    <type>Lookup</type>
</CustomField>