force-app/main/default/objects/Mother__c/fields/Lock_this_record__c.field-meta.xml
<CustomField>
    <fullName>Lock_this_record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>locks the record when checked, uses dynamic forms</description>
    <label>Lock this record?</label>
    <type>Checkbox</type>
</CustomField>