force-app/main/default/objects/Mother__c/fields/Sons__c.field-meta.xml
<CustomField>
    <fullName>Sons__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sons</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>