force-app/main/default/objects/Mother__c/listViews/Custom_list.listView-meta.xml
<ListView>
    <fullName>Custom_list</fullName>
    <columns>NAME</columns>
    <columns>Childrens__c</columns>
    <columns>Sons__c</columns>
    <columns>Daughters__c</columns>
    <filterScope>Mine</filterScope>
    <label>Custom list</label>
</ListView>